--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>JSX</title>
+    <title>My Favourite Foods</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
